exports[`test should handle changeListMode action CARD_MODE 1`] = `
Array [
  Object {
    "mode": "card",
    "type": "CHANGE_LIST_MODE",
  },
]
`;

exports[`test should handle changeListMode action LIST_MODE 1`] = `
Array [
  Object {
    "mode": "list",
    "type": "CHANGE_LIST_MODE",
  },
]
`;

exports[`test should handle deleteContact action 1`] = `
Array [
  Object {
    "id": "-1",
    "type": "DELETE_CONTACT",
  },
]
`;

exports[`test should handle initialize action 1`] = `
Array [
  Object {
    "type": "RESET_CONTACT_LIST",
  },
]
`;

exports[`test should handle loadData action 1`] = `
Array [
  Object {
    "type": "REQUEST_CONTACT_LIST",
  },
]
`;

exports[`test should handle recieveContactList action 1`] = `
Array [
  Object {
    "contacts": Array [],
    "type": "REQUEST_CONTACT_LIST_SUCCESS",
  },
]
`;

exports[`test should handle transitionToContactCard action 1`] = `
Array [
  Object {
    "contact": Object {
      "id": "-1",
    },
    "type": "TRANSTION_TO_EDIT_CONTACT_CARD",
  },
]
`;

exports[`test should handle transitionToEditContact action 1`] = `
Array [
  Object {
    "contact": Object {
      "id": "-1",
    },
    "type": "TRANSTION_TO_EDIT_CONTACT",
  },
]
`;
